// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders root class if not the active Thumbnail 1`] = `
<button
  className="root"
  onClick={[Function]}
>
  <div
    className="root container"
  >
    <img
      alt="test-thumbnail"
      className="image placeholder"
      height={170}
      loading="eager"
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
      width={135}
    />
    <img
      alt="test-thumbnail"
      className="image notLoaded"
      height={170}
      loading="lazy"
      onError={[Function]}
      onLoad={[Function]}
      sizes="135px"
      src="/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=135&height=170"
      srcSet="/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=40&height=50 40w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=80&height=100 80w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=160&height=200 160w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=320&height=400 320w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=640&height=800 640w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=960&height=1200 960w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=1280&height=1600 1280w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=1600&height=2000 1600w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=2560&height=3200 2560w"
      width={135}
    />
  </div>
</button>
`;

exports[`renders the Thumbnail component correctly 1`] = `
<button
  className="rootSelected"
  onClick={[Function]}
>
  <div
    className="root container"
  >
    <img
      alt="test-thumbnail"
      className="image placeholder"
      height={170}
      loading="eager"
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
      width={135}
    />
    <img
      alt="test-thumbnail"
      className="image notLoaded"
      height={170}
      loading="lazy"
      onError={[Function]}
      onLoad={[Function]}
      sizes="135px"
      src="/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=135&height=170"
      srcSet="/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=40&height=50 40w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=80&height=100 80w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=160&height=200 160w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=320&height=400 320w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=640&height=800 640w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=960&height=1200 960w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=1280&height=1600 1280w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=1600&height=2000 1600w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=2560&height=3200 2560w"
      width={135}
    />
  </div>
</button>
`;

exports[`renders transparent placeholder when no file name is provided 1`] = `
<button
  className="rootSelected"
  onClick={[Function]}
>
  <div
    className="root container"
  >
    <img
      alt="placeholder-thumbnail"
      className="image placeholder"
      loading="eager"
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
      width={null}
    />
    <img
      alt="placeholder-thumbnail"
      className="image notLoaded"
      loading="lazy"
      onError={[Function]}
      onLoad={[Function]}
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
    />
  </div>
</button>
`;
